hphp/test/zend/good/ext/date/tests/cal_days_in_month_invalid_date.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("calendar")) { echo "skip extension not available"; }
}
